[metadata]
name = Mopidy-API-Explorer
version = 2.0.0
url = https://github.com/dz0ny/mopidy-api-explorer
author = dz0ny, Matthew Gamble
author_email = dz0ny@ubuntu.si, git@matthewgamble.net
license = MIT
license_file = LICENSE
description = Mopidy API Explorer
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.1.1
    setuptools

[options.entry_points]
mopidy.ext =
    api_explorer = mopidy_api_explorer:Extension
