[metadata]
name = Mopidy-API-Explorer
version = 2.0.0
url = https://github.com/dz0ny/mopidy-api-explorer
author = Matthew Gamble
author_email = git@matthewgamble.net
license = MIT
license_file = LICENSE
description = Mopidy API Explorer
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.1.1
    setuptools


[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-import-order
    isort
dev =
    %(lint)s


[options.entry_points]
mopidy.ext =
    api_explorer = mopidy_api_explorer:Extension


[flake8]
application-import-names = mopidy_api_explorer, tests
max-line-length = 80
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
    # B305: .next() is not a thing on Python 3 (used by playback controller)
    B305
